syntax = "proto3";

package customerpb;
option go_package = "hex-postgres-grpc/proto/customer;customerpb";

import "google/protobuf/timestamp.proto";

service CustomerService {
    rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse);
}

message CustomerMessage {
    string id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateCustomerRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
}

message CreateCustomerResponse {
    CustomerMessage customer = 1;
}